# cookiecutter-fastapi

./: README.rst  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .gitignore  README.rst  manage.py  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/app/: main.py  worker.py
{{cookiecutter.project_slug}}/app/api/v1/: api.py
{{cookiecutter.project_slug}}/app/crud/: base.py
{{cookiecutter.project_slug}}/app/db/: __init__.py  alembic.ini  session.py
{{cookiecutter.project_slug}}/app/db/alembic/: env.py
{{cookiecutter.project_slug}}/app/models/: user.py
{{cookiecutter.project_slug}}/app/tests/: conftest.py
{{cookiecutter.project_slug}}/app/tests/crud/: test_user.py
{{cookiecutter.project_slug}}/app/tests/utils/: user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: initial_data.py  main.py  utils.py  worker.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: deps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/v1/: api.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: celery_app.py  config.py  security.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/crud/: __init__.py  base.py  crud_user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/: alembic.ini  init_db.py  session.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/alembic/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: conftest.py
(+9 files in other folders)
