[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.project_author}}"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
numpy = "^1.20.1"
lz4 = "^3.1.3"
SQLAlchemy = "^1.3.23"
alembic = "^1.5.6"
psycopg2-binary = "^2.8.5"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
email-validator = "^1.1.2"
emails = "^0.5.15"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
jinja2 = "^2.11.2"
tenacity = "^6.1.0"
python-multipart = "^0.0.5"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
